# rust-psoc62-pac-example

./: .neoconf.json  Cargo.toml  Makefile  README.md  debug-m0.gdb  debug-m4.gdb  flake.nix  memory-v6.x  memory-v7.x  memory.x  rust-toolchain.toml
.cargo/: config
src/: main.rs
