[package]
name = "rust-psoc62-pac-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rt = "0.7.3"
cortex-m = "0.7"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"

[dependencies.rust_psoc62_pac]
git = "https://github.com/michelrandahl/rust-psoc62-pac.git"
branch = "main"
